# passive-listening-prototype

./: .gitignore  Makefile  README.md  build.gradle.kts  detekt.yml  settings.gradle.kts
brain/: build.gradle.kts
brain/src/main/kotlin/: ExternalCommand.kt  FakeTranscriptionService.kt  InsecureGrpcServer.kt  TlsGrpcServer.kt  TranscriptionServiceGrpcKt.kt
brain/src/test/kotlin/: Wav2letterTest.kt
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: plp.conventions.gradle.kts  plp.grpc.gradle.kts
chrome_transcription_service/: README.md  pyproject.toml
chrome_transcription_service/src/: TranscriptionService.py  TranscriptionServiceMain.py  audio2text.py
chrome_transcription_service/src/plp/proto/: Transcription_pb2.py
classify_client/: README.md  build.gradle.kts
common/: build.gradle.kts
common/src/main/java/: TranscriptionServiceGrpc.java
dashboard/: build.gradle.kts
dashboard/src/main/resources/: index.html
ear/: build.gradle.kts
hub/: README.md  build.gradle.kts
proto/: README.md  build.gradle.kts
src/main/java/: Stt.java
src/main/kotlin/: GrpcServer.kt  MutualTlsGrpcServer.kt  StandaloneWav2letter.kt  TranscriptionServer.kt  TranscriptionService.kt  Wav2letter.kt
src/test/kotlin/: ExternalCommandTest.kt
transcribe/: build.gradle.kts
transcribe_aws/: README.md  build.gradle.kts
transcribe_chrome/: .gitignore
transcribe_chrome/src/: TranscriptionService.py  TranscriptionServiceMain.py  audio2text.py  capture_screenshot.py  grpc_helper.py
vad_service/: README.md
vad_service/src/: VadService.py  VadServiceMain.py  vad.py
(+141 files in other folders)
